--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div><footer><a href="https://github.com/jgchoti/weather-app" target ="_blank">Open-source code</a>, by Chotirat Jonggrit</footer>
     <script src="src/index.js"></script>
   </body>
 </html>
