--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <i class="fa-solid fa-hat-wizard"></i>
           </div>
         </div>
-      </div><footer><a href="https://github.com/jgchoti/weather-app" target ="_blank">Open-source code</a>, by Chotirat Jonggrit</footer>
+      </div><footer><a href="https://github.com/jgchoti/weather-app" target ="_blank">Open-source code</a> 👩🏾‍💻, by Chotirat Jonggrit</footer>
     </div>
     <script src="src/index.js"></script>
   </body>
