Add function to switch background as per weather

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="card mb-3 app-card" style="max-width: 540px">
+      <div class="card mb-3 app-card" id="app-card" style="max-width: 540px">
         <div class="row">
           <div class="col-12 mb-3"></div>
           <div class="col-1 mb-3"></div>
