update id and class name

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
             <div class="row">
               <div class="col-12 cur-date" id="date-time"></div>
               <div class="col-1"></div>
-              <div class="col-7 cur-temp" id="cur-temp-cel">--</div>
-              <div class="col-3 c-degree">
+              <div class="col-7 cur-temp" id="cur-temp">--</div>
+              <div class="col-3 active-unit">
                 <span id="active">°C </span>
-                <div class="cur-temp-icon">
-                  <i class="fa-solid fa-cloud-sun"></i>
-                </div>
+                
+                 <img class="cur-temp-icon" id="cur-temp-icon" src="" alt="">
+              
               </div>
 
-              <div class="col-1 f-degree">
+              <div class="col-1">
                 <button class="unit-button" id="inactive">°F</button>
               </div>
             </div>
@@ -117,36 +117,20 @@
             </h2>
           </div>
           <div class="col-1"></div>
-          <div class="col-7 know-text">Weather Description:</div>
-          <div class="col-4 cur-precipitation" id="description">--</div>
+          <div class="col-7 know-text" >Weather Description:</div>
+          <div class="col-4 cur-description" id="description">--</div>
           <div class="col-1"></div>
-          <div class="col-7 know-text">Humidity:</div>
+          <div class="col-7 know-text" >Humidity:</div>
           <div class="col-4 cur-humidity" id="humidity">--</div>
           <div class="col-1"></div>
-          <div class="col-7 mb-3 know-text">Wind:</div>
+          <div class="col-7 mb-3 know-text" >Wind:</div>
           <div class="col-4 cur-wind" id="wind">--</div>
           <div class="col-1 mb-3"></div>
           <div class="col-11">
-            <h2>
-              <i class="fa-solid fa-wand-magic-sparkles"></i>
-              What To Wear
-            </h2>
-          </div>
-          <div class="col-1 mb-3"></div>
-          <div class="col-3 mb-3 wear-icon">
-            <i class="fa-solid fa-umbrella"></i>
-          </div>
-          <div class="col-3 mb-3 wear-icon">
-            <i class="fa-solid fa-socks"></i>
-          </div>
-          <div class="col-3 mb-3 wear-icon">
-            <i class="fa-solid fa-mitten"></i>
-          </div>
-          <div class="col-2 mb-3 wear-icon">
-            <i class="fa-solid fa-hat-wizard"></i>
-          </div>
         </div>
-      </div><footer><a href="https://github.com/jgchoti/weather-app" target ="_blank">Open-source code</a> 👩🏾‍💻 by Chotirat Jonggrit</footer>
+      </div>
+    </div>
+      <footer><a href="https://github.com/jgchoti/weather-app" target ="_blank">Open-source code</a> 👩🏾‍💻 by Chotirat Jonggrit</footer>
       <br>
     </div>
     <script src="src/index.js"></script>
