add forecast weather function

--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
               <div class="col-7 cur-temp" id="cur-temp">--</div>
               <div class="col-3 active-unit">
                 <span id="active">°C </span>
-                
                  <img class="cur-temp-icon" id="cur-temp-icon" src="" alt="">
-              
               </div>
 
               <div class="col-1">
@@ -75,38 +73,59 @@
             <div class="row">
               <div class="col-2"></div>
               <div class="col-6 fu-day" id="day1"></div>
-              <div class="col-4 fu-icon">
-                <i class="fa-solid fa-cloud-sun-rain"></i>
+              <div class="col-4">
+                <img class="fu-icon" src="" alt="">
               </div>
               <div class="col-2"></div>
-              <div class="col-6 fu-temp">17° 7°</div>
+              <div class="col-6 fu-temp">
+                <span class="fu-max-temp"></span>
+                <span class="fu-min-temp"></span>
+              </div>
               <div class="col-4"></div>
               <div class="col-2"></div>
               <div class="col-6 fu-day" id="day2"></div>
-              <div class="col-4 fu-icon"><i class="fa-solid fa-cloud"></i></div>
-              <div class="col-2"></div>
-              <div class="col-6 fu-temp">17° 7°</div>
-              <div class="col-4 fu-icon"></div>
-              <div class="col-2"></div>
-              <div class="col-6 fu-day" id="day3"></div>
-              <div class="col-4 fu-icon">
-                <i class="fa-solid fa-cloud-showers-heavy"></i>
+              <div class="col-4">
+                <img class="fu-icon" src="" alt="">
               </div>
               <div class="col-2"></div>
-              <div class="col-6 fu-temp">18° 7°</div>
-              <div class="col-4 fu-icon"></div>
+              <div class="col-6 fu-temp">
+                <span class="fu-max-temp"></span>
+                <span class="fu-min-temp"></span>
+              </div>
+              <div class="col-4"></div>
+              <div class="col-2"></div>
+              <div class="col-6 fu-day" id="day3"></div>
+              <div class="col-4">
+                <img class="fu-icon" src="" alt="">
+              </div>
+              <div class="col-2"></div>
+              <div class="col-6 fu-temp">
+                <span class="fu-max-temp"></span>
+                <span class="fu-min-temp"></span>
+              </div>
+              <div class="col-4"></div>
               <div class="col-2"></div>
               <div class="col-6 fu-day" id="day4"></div>
-              <div class="col-4 fu-icon"><i class="fa-solid fa-sun"></i></div>
+              <div class="col-4">
+                <img class="fu-icon" src="" alt="">
+              </div>
               <div class="col-2"></div>
-              <div class="col-6 fu-temp">17° 4°</div>
-              <div class="col-4 fu-icon"></div>
+              <div class="col-6 fu-temp">
+                <span class="fu-max-temp"></span>
+                <span class="fu-min-temp"></span>
+              </div>
+              <div class="col-4"></div>
               <div class="col-2"></div>
               <div class="col-6 fu-day" id="day5"></div>
-              <div class="col-4 fu-icon"><i class="fa-solid fa-wind"></i></div>
+              <div class="col-4">
+                <img class="fu-icon" src="" alt="">
+              </div>
               <div class="col-2"></div>
-              <div class="col-6 fu-temp">17° 5°</div>
-              <div class="col-4 fu-icon"></div>
+              <div class="col-6 fu-temp">
+                <span class="fu-max-temp"></span>
+                <span class="fu-min-temp"></span>
+              </div>
+              <div class="col-4"></div>
             </div>
           </div>
           <div class="col-1"></div>
